1.2.0b5:
    WATO:
    * FIX: fix folding problems with dependent host tags
    * FIX: Detecting duplicate tag ids between regular tags and auxtags
    * FIX: Fixed layout problem of "new special rule" button in rule editor

    Multisite:
    * FIX: remove refresh button from dashboard.
    * FIX: remove use of old option defaults.checkmk_web_uri
    * FIX: fixed outgoing bandwidth in fc port perfometer
    * New display type 'boxes-omit-root' for BI views
    * Hostgroup view BI Boxes omits the root level
    * Finalized layout if view options and commands/filters/painteroptions.
    * FIX: remove nasty JS error in sidebar
    * FIX: fix folding in custom links (directories would not open)
    * FIX: animation of rotation treeangle in trees works again
    * FIX: Logwatch: Changed font color back to black
    * FIX: show toggle button for checkboxes in deactivated state
    * FIX: fix repeated stacked refresh when toggling columns
    * FIX: disable checkbox button in non-checkboxable layouts
    * FIX: fix table layout for views (gaps where missing sometimes)

    Mobile:
    * FIX: Fixed logtime filter settings in all mobile views
    * FIX: fix some layout problems

    BI:
    * New aggregation function count_ok, that counts the number
      of nodes in state OK.
    * FIX: Removed debug output int count_ok aggregation
    * FIX: fixed box layout with omitted root (was sometimes invisible)

    Checks & Agents:
    * Linux: Modified cluster section to allow pacemaker/corosync clusters without heartbeat
    * AIX: convert NIC check to lnx_if (now being compatible with if/if64)
    * AIX: new check for CPU utilization (using section lparstat_aix)

1.2.0b4:
    Core:
    * New configuration variable snmp_timing, allowing to 
      configure timeout and retries for SNMP requests (also via WATO)
    * New configuration variable custom_checks. This is mainly for
      WATO but also usable in main.mk It's a variant of legacy_checks that